@@ -56,7 +56,6 @@
 	kill session (not bound by default)
 - fix most(1) problems after scrolling
 - fix mutt problems with redraw (mutt's) status line when reading mail
-- check for some reqd terminfo caps on startup
 
 -- For 0.2 --------------------------------------------------------------------
 - copy and paste
